--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -10,6 +10,7 @@
     <ui:define name="title">Principal</ui:define>
     <ui:define name="content">
         ... lo que contenga la pagina
+        putabida
         <!-- No tengo claro si esto me sirve para insertar 
          attrs personalizados a la plantilla/componentes -->
     <!--<ui:include src="./app-navbar.xhtml"></ui:include>-->
